--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -99,4 +99,17 @@ nav a, nav p{
     top: 0;
     left: 0;
 }
-
+.menu{
+    position: fixed;
+    z-index: 2;
+    height: 100vh;
+    width: 32vw;
+    background-color: red;
+    transition: 0.7s ease-in-out;
+}
+.fechado{
+    right: -70%;
+}
+.aberto{
+    right: 0;
+}
