--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -28,7 +28,7 @@ header h2{
 }
 .titulo{
     animation-name: letter;
-    animation-duration: 1s;
+    animation-duration: 2s;
     animation-iteration-count: 1;
     transition: ease-in-out;
 }
@@ -88,24 +88,21 @@ nav a, nav p{
 .btns{
     background-color: #ffffff;
     font-family: 'Merriweather', serif;
-    border: white solid 3px;
     position: relative;
+    border: none;
     transition: 0.5s ease-in-out;
 }
-.btns::before{
-    height: 100%;
-    width: 100%;
-    background-color: aliceblue;
-    top: 0;
-    left: 0;
+.btns:hover{
+    background-color: #c7c7c7;
 }
 .menu{
     position: fixed;
     z-index: 2;
     height: 100vh;
     width: 32vw;
-    background-color: red;
+    background-color: rgba(51, 51, 51, 0.596);
     transition: 0.7s ease-in-out;
+    
 }
 .fechado{
     right: -70%;
