--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Merriweather', serif;
 }
 @font-face {
     font-family: 'next';
@@ -20,7 +21,6 @@ header{
 }
 header a{
     font-size: 1.3em;
-    font-family: 'Merriweather', serif;
 }
 header h2{
     font-family: next;
@@ -44,7 +44,6 @@ header h2{
     }
 }
 header p{
-    font-family: 'Merriweather', serif;
     opacity: 0.85;
 }
 nav a{
@@ -87,7 +86,6 @@ nav a, nav p{
 }
 .btns{
     background-color: #ffffff;
-    font-family: 'Merriweather', serif;
     position: relative;
     border: none;
     transition: 0.5s ease-in-out;
@@ -99,8 +97,9 @@ nav a, nav p{
     position: fixed;
     z-index: 2;
     height: 100vh;
-    width: 32vw;
-    background-color: rgba(51, 51, 51, 0.596);
+    width: 40vw;
+    background-image: url(../imgs/mesh-284.png);
+    background-image: 10% 10%;
     transition: 0.7s ease-in-out;
     
 }
@@ -110,3 +109,61 @@ nav a, nav p{
 .aberto{
     right: 0;
 }
+.desc-art{
+    min-height: 70vh;
+    border-radius: 10px;
+    width: 80%;
+    background-color: #29262b;
+}
+.div-select{
+    height: 10%;
+    padding: 0px 0px !important;
+}
+.div-select select{
+    width: 100%;
+    color: white;
+    background-color: rgb(25, 25, 25);
+    border-radius: 0px 0px 10px 10px;
+}
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #616161 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #616161;
+    border-radius: 0px;
+    border: 3px solid #ffffff;
+  }
+  @keyframes transition{
+    0%{
+        scale: 0;
+    }
+    100%{
+        scale: 1;
+    }
+}
+  .transition{
+    animation-name: transition;
+    animation-duration: 0.6s;
+  }
+.div-menu a{
+    font-size: 25px;
+    padding: 10px;
+  }
+  @media(max-width:400px){
+    .div-menu a{
+        font-size: 17px;
+      }
+  }
