feito quase tudo fml

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -48,6 +48,12 @@ header p{
 }
 nav a{
     position: relative;
+    color: rgba(255, 255, 255, 0.427);
+    transition: 0.5s;
+}
+nav a:hover{
+    color: #ffffff;
+    transition: 0.5s;
 }
 nav a::after{
     content: '';
@@ -115,6 +121,17 @@ nav a, nav p{
     width: 80%;
     background-color: #29262b;
 }
+.galeria{
+    width: 80%;
+}
+.galeriaaberta{
+    min-height: 50vh;
+    display: flex;
+    background-color: #29262b;
+}
+.img-div{
+    display: none;
+}
 .div-select{
     height: 10%;
     padding: 0px 0px !important;
@@ -123,7 +140,7 @@ nav a, nav p{
     width: 100%;
     color: white;
     background-color: rgb(25, 25, 25);
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 10px 10px 0px 0px;
 }
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
@@ -166,4 +183,10 @@ nav a, nav p{
     .div-menu a{
         font-size: 17px;
       }
+  }
+  .img-p-1,.img-p-2,.img-p-3{
+    width: 200px;
+  }
+  .titulo-port{
+    display: none;
   }
