--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -204,7 +204,7 @@ nav a:hover::after {
   display: none;
 }
 
-.sec-cards {
+#sec-cards {
   min-height: 80vh;
 }
 
@@ -240,6 +240,9 @@ nav a:hover::after {
 
 .cards div i {
   font-size: 4em;
+}
+.cards p{
+  max-width: 95%;
 }
 
 .footer {
